--- a/main.css
+++ b/main.css
@@ -1,16 +1,16 @@
 @font-face {
-    src: url("./fonts/FormaDJRVariableNormal[opsz\,slnt\,wght]-Edu.woff2") format("woff2"),
-         url('./fonts/FormaDJRVariableNormal[opsz\,slnt\,wght]-Edu.woff') format("woff"),
-        url('./fonts/FormaDJRVariableNormal[opsz\,slnt\,wght]-Edu.ttf') format('truetype');
+    src:
+        url('fonts/Fraunces[SOFT\,WONK\,opsz\,wght].woff2') format("woff"),
+        url('fonts/Fraunces[SOFT\,WONK\,opsz\,wght].ttf') format('truetype');
 
-    font-family: 'Forma';
+    font-family: 'Fraunces';
     font-style: normal;
     font-weight: normal;
     }
     
     body{
     background-color: lightsteelblue;
-    font-family: 'Forma';
+    font-family: 'Fraunces';
 }
 /* how the page wrapper will appear on mobile */
 .page-wrapper{
@@ -57,12 +57,14 @@ h3{
 
 @keyframes weightChange {
     0%, 100%{
-        font-variation-settings: "opsz" 16, "wght" 200, "slnt" 0;
-    }
-    50%{font-variation-settings: "opsz" 16, "wght" 900, "slnt" -13;
+        font-variation-settings: "opsz" 9, "wght" 100, "SOFT" 0, "WONK" 1;
     }
     
+    50%{
+        font-variation-settings: "opsz" 9, "wght" 900, "SOFT" 0, "WONK" 1;
 }
+}
+    
 /* variable font that changes on hover */
 .variable-font{
     font-weight:1 ;
