added universal selector

--- a/main.css
+++ b/main.css
@@ -8,6 +8,10 @@
     font-weight: normal;
     }
     
+    *{
+        border: blue 3px dashed;
+    }
+    
     body{
     background-color: lightsteelblue;
     font-family: 'Fraunces';
