--- a/main.css
+++ b/main.css
@@ -8,50 +8,84 @@
     font-weight: normal;
     }
     
-    *{
+    /* *{
         border: blue 3px dashed;
-    }
+    } */
     
     body{
-    background-color: lightsteelblue;
+    background-color: rgba(245, 233, 226, 1);
     font-family: 'Fraunces';
 }
 /* how the page wrapper will appear on mobile */
 .page-wrapper{
-    width: min(100% - 3rem, 80ch);
+  
     margin-inline: auto;
 }
 /* how the page wrapper appears on desktop */
 
-@media only screen and (min-width:800px){
+
 .page-wrapper{
 display: grid;
 grid-gap: 25px;
 grid-template-columns: 1fr 1fr;
 grid-template-rows: auto;
 grid-template-areas: 
-    "h v"
+    "h c"
     "a a";
+}
+
+.hero {
+font-size: 12px;
 }
 
 .history {
 grid-area: h;
+margin-left: 40px;
 }
 
 .variations{
-grid-area: v;
+grid-area: c;
+margin-left: 150px;
+font-size: 60px;
 }
 
-.alphabet {
+#characters {
 grid-area: a;
+background-color: rgba(52, 40, 40, 1);
+color: rgba(245, 233, 226, 1);
+text-align: center;
 }
+
+#text-wrapper{
+    margin-left: 40px;
+
 }
+
+.characters-title{
+    color:rgba(252, 207, 199, 1);
+    text-align: left;
+}
+
 /* CSS for the footer */
 footer{
-    background-color: gray;
+    background-color: rgba(245, 233, 226, 1);
+    display: grid;
+    width: 100%;
+    grid-gap:5px;
+    grid-template-columns: repeat (12, 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: 
+    "f c c c c c c c c c c";
 }
 
 /* variable font animation */
+
+h2{
+    font-size: 30px;
+    margin-left: 40px;
+    margin-top: 40px;
+}
+
 h3{
     font-weight:20; 
     text-align: center;
@@ -59,16 +93,25 @@ h3{
     animation: weightChange 7s infinite;
 }
 
-@keyframes weightChange {
-    0%, 100%{
-        font-variation-settings: "opsz" 9, "wght" 100, "SOFT" 0, "WONK" 1;
-    }
-    
-    50%{
-        font-variation-settings: "opsz" 9, "wght" 900, "SOFT" 0, "WONK" 1;
+h4{
+    grid-area: f;
+    font-size: 1.5em;
+    text-align: center;
+    margin-left: 50px;
+    /* border-color: blue;
+    border-style: solid; */
 }
+
+h5{
+    grid-area: c;
+    font-size: 15px;
+    text-align: center;
+    margin-right: 50px;
+    /* border-style: solid;
+    border-color: red; */
 }
-    
+
+
 /* variable font that changes on hover */
 .variable-font{
     font-weight:1 ;
@@ -95,3 +138,68 @@ h3{
     font-variation-settings: "wght" 120, "wdth" 0, "XXXX" 100;
 }
 
+
+
+
+
+/* Extra small devices (phones, 600px and down) */
+@media only screen and (max-width: 600px) {
+    h4{
+        font-size: 18px;
+    }
+    h5{
+        font-size: 10px;
+    }
+  }
+  
+  /* Small devices (portrait tablets and large phones, 600px and up) */
+  @media only screen and (min-width: 600px) {
+    h4{
+        font-size: 20px;
+    }
+    h5{
+        font-size: 12px;
+    }
+  }
+  
+  /* Medium devices (landscape tablets, 768px and up) */
+  @media only screen and (min-width: 768px) {
+    h4{
+        font-size: 25px;
+    }
+    h5{
+        font-size: 15px;
+    }
+  } 
+  
+  /* Large devices (laptops/desktops, 992px and up) */
+  @media only screen and (min-width: 992px) {
+    footer{
+        background-color: rgba(245, 233, 226, 1);
+        display: grid;
+        width: 100%;
+        grid-gap:5px;
+        grid-template-columns: repeat (12, 1fr);
+        grid-template-rows: auto;
+        grid-template-areas: 
+        ". . f c c c c c c c c";
+    }
+  } 
+  
+  /* Extra large devices (large laptops and desktops, 1200px and up) */
+  @media only screen and (min-width: 1200px) {
+    footer{
+        grid-template-rows: auto;
+        grid-template-areas: 
+        ". . f c c c c c c c c";
+  }
+
+@keyframes weightChange{
+    0%, 100%{
+        font-variation-settings: "opsz" 9, "wght" 100, "SOFT" 0, "WONK" 1;
+    }
+    
+    50%{
+        font-variation-settings: "opsz" 9, "wght" 900, "SOFT" 0, "WONK" 1;
+}
+}}
