--- a/navigation.css
+++ b/navigation.css
@@ -8,25 +8,21 @@
   
   header {
     /* where to set the color of the nav bar */
-      background: lightgray;
+      background-color: rgba(245, 233, 226, 1);
       text-align: center;
-      top:0px;
+      top: 0px;
       position: fixed;
       z-index: 999;
-      width: 100%
+      width: 100%;
   }
-  
-  .logo {
-    margin: 0;
-  }
+
   /* where to change the background color of the pop-up nav bar*/
   nav {
       position: absolute;
-      text-align: left;
-      padding-top:10px;
+      text-align: center;
+      padding-top: 10px;
       top: 100%;
       left: 0;
-      background: gray;
       width: 100%;
       transform: scale(1,0);
       transform-origin: top;
@@ -40,7 +36,7 @@
   }
   
   nav li {
-      margin-bottom: 1em;
+      margin-bottom: 2em;
       margin-left: 1em;
   }
   
@@ -48,7 +44,6 @@
       color: black;
       text-decoration: none;
       font-size: 1.2rem;
-      text-transform: uppercase;
       opacity: 0;
       transition: opacity 100ms ease-in-out;
   }
