got rid of phone number

--- a/navigation.css
+++ b/navigation.css
@@ -137,7 +137,7 @@
       margin-left: 3em;
       margin-bottom: 0;
     }
-    nav a::before {
+    /* nav a::before {
       content: '';
       display: block;
       height: 3px;
@@ -147,12 +147,10 @@
       left: 0;
       right: 0;
       transform: scale(0,1);
-      transition: transform ease-in-out 250ms;
+      transition: transform ease-in-out 250ms; */
       
     }
     nav a:hover::before {
       transform: scale(1,1);
     }
-  }
-  
   
