--- a/navigation.css
+++ b/navigation.css
@@ -10,7 +10,7 @@
     /* where to set the color of the nav bar */
       background-color: rgba(245, 233, 226, 1);
       text-align: center;
-      top: 0px;
+      padding: 20px;
       position: fixed;
       z-index: 999;
       width: 100%;
@@ -18,9 +18,8 @@
 
   /* where to change the background color of the pop-up nav bar*/
   nav {
-      position: absolute;
       text-align: center;
-      padding-top: 10px;
+      padding-top: 1px;
       top: 100%;
       left: 0;
       width: 100%;
@@ -43,11 +42,12 @@
   nav a {
       color: rgba(84, 54, 49, 0.5);
       text-decoration: none;
-      font-size: 25px;
+      font-size: 30px;
       opacity: 0;
       transition: opacity 100ms ease-in-out;
+      position: relative;
+      right: -200px;
   }
-
 
   /* where to change the font color of the nav bar pop-up */
   nav a:hover {
@@ -137,6 +137,7 @@
       margin-left: 3em;
       margin-bottom: 0;
     }
+    
     /* nav a::before {
       content: '';
       display: block;
