download button color

--- a/main.css
+++ b/main.css
@@ -187,17 +187,17 @@
         background-color: rgba(252, 207, 199, 1);
         font-family: "fraunces";
         border: none;
-        padding:7px;
-        /* width: 10%; */
-        /* height: 5%; */
+        margin-top: 10px;
+        padding: 10px;
 
     }
 h3{
-    font-size:50px;
+    font-size:30px;
+    color: rgba(208, 54, 71, 0.5);
 }
     a:hover{
-        color:blue;
-        font-size:40px;
+        color: rgba(101, 25, 34, 0.5);
+        font-size:30px;
         }
     a {
             text-decoration: none;
@@ -207,10 +207,12 @@ h3{
         background-color: rgba(245, 233, 226, 1);
         color:rgba(84, 54, 49, 1);
         display: grid;
-        grid-template-columns: repeat(6 1fr);
+        grid-template-columns: repeat(4 1fr);
         grid-template-areas:
-        "f f f i i i";
+        "f i i i";
         width: 100%;
+        padding-top: 20px;
+        padding-bottom: 20px;
     }
     h4{
         grid-area: "f";
@@ -223,6 +225,7 @@ h3{
         font-size: 20px;
         color:rgba(84, 54, 49, 1);
         text-align: center;
+        padding-right: 20px;
     }
 
 
